Fix arrow z-index

--- a/plugin/src/jquery.stackbox.less
+++ b/plugin/src/jquery.stackbox.less
@@ -164,7 +164,7 @@ html.noscroll {
 	}
 
 	.stackbox-arrow {
-		z-index: 1;
+		z-index: 2;
 
 		&,
 		&:after {
